logs/Slang/generated/keywords/5.6.2--keyword_assume.sv.log
name: assume
description: The 'assume' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assume.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assume.sv:8:8: error: expected declarator
    bit assume;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assume.sv:8:9: error: language feature not yet supported
    bit assume;
        ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assume.sv:8:15: error: expected expression
    bit assume;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assume.sv:8:15: error: expected '('
    bit assume;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assume.sv:8:15: error: expected ')'
    bit assume;
              ^
